<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".Mood">

    <View
        android:id="@+id/box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/box_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subheading_txt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title_howsyour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/arial_mt_rounded"
        android:text="How's your"
        android:textColor="@color/heading"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subsleep_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/arial_mt_rounded"
        android:text="sleep?"
        android:textColor="@color/heading"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_howsyour" />

    <TextView
        android:id="@+id/subheading_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/arial_nova_light"
        android:text="@string/mood_page"
        android:textColor="@color/subtitle"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subsleep_txt" />

    <ImageView
        android:id="@+id/moodView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/good"
        app:layout_constraintEnd_toEndOf="@+id/box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/box" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/return_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="Return"
        android:textColor="@color/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button"
        android:fontFamily="@font/arial_mt_rounded"
        android:text="Submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/heading"
        app:layout_constraintBottom_toBottomOf="@+id/box"
        app:layout_constraintEnd_toEndOf="@+id/subheading_txt"
        app:layout_constraintStart_toStartOf="@+id/subheading_txt" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        app:chipSpacingHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@+id/submit_button"
        app:layout_constraintEnd_toEndOf="@+id/subheading_txt"
        app:layout_constraintStart_toStartOf="@+id/subheading_txt"
        app:layout_constraintTop_toTopOf="@+id/box"
        app:singleLine="false"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/good_button"
            style="@style/CustomizedChipStyle"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:fontFamily="@font/arial_mt_rounded"
            android:text="@string/good_btn"
            android:textAlignment="center"
            android:textSize="18sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/relaxing_button"
            style="@style/CustomizedChipStyle"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:fontFamily="@font/arial_mt_rounded"
            android:text="@string/relax_btn"
            android:textAlignment="center"
            android:textSize="18sp" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipSpacingHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@+id/submit_button"
        app:layout_constraintEnd_toEndOf="@+id/subheading_txt"
        app:layout_constraintStart_toStartOf="@+id/subheading_txt"
        app:layout_constraintTop_toTopOf="@+id/chipGroup"
        app:singleLine="false"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/bad_button"
            style="@style/CustomizedChipStyle"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:fontFamily="@font/arial_mt_rounded"
            android:text="@string/bad_btn"
            android:textAlignment="center"
            android:textSize="18sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/soso_button"
            style="@style/CustomizedChipStyle"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:fontFamily="@font/arial_mt_rounded"
            android:text="@string/soso_btn"
            android:textAlignment="center"
            android:textSize="18sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/worst_button"
            style="@style/CustomizedChipStyle"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:fontFamily="@font/arial_mt_rounded"
            android:text="@string/worst_btn"
            android:textAlignment="center"
            android:textSize="18sp" />
    </com.google.android.material.chip.ChipGroup>


</androidx.constraintlayout.widget.ConstraintLayout>